scripts/nullaway/nullgtn/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8.txt
../nullgtn/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/TestSuite.java:19: error: [NullAway] dereferenced expression ResultPrinter.getInstance() is @Nullable
        ResultPrinter.getInstance().addSuite(this.getName());
                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/Test.java:18: error: [NullAway] initializer method does not guarantee @NonNull fields result (line 14), fixture (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Test(String newName) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/TestResultFail.java:14: error: [NullAway] parameter printer is @NonNull, but parameter in superclass method main.java.TestResult.updateMe(main.java.ResultPrinter) is @Nullable
    public void updateMe(ResultPrinter printer) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/TestResultOk.java:14: error: [NullAway] parameter printer is @NonNull, but parameter in superclass method main.java.TestResult.updateMe(main.java.ResultPrinter) is @Nullable
    public void updateMe(ResultPrinter printer) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/TestResultError.java:14: error: [NullAway] parameter printer is @NonNull, but parameter in superclass method main.java.TestResult.updateMe(main.java.ResultPrinter) is @Nullable
    public void updateMe(ResultPrinter printer) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/TestRunner.java:7: error: [NullAway] dereferenced expression ResultPrinter.getInstance() is @Nullable
        ResultPrinter.getInstance().print();
                                   ^
    (see http://t.uber.com/nullaway )
6 errors
